# bounty-bots

./: .env.example  .envrc  .gitignore  README.md  agents.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  attempts.py  challenges.py  conversations.py  credit_purchases.py  credit_transactions.py  credit_wallets.py  messages.py  payments.py  timezones.py  users.py
backend/app/routers/: attempts.py  auth.py  challenges.py  credits.py  health.py  helpers.py  payments.py  users.py
backend/app/schemas/: __init__.py  attempts.py  auth.py  challenges.py  credits.py  payments.py  users.py
backend/app/services/: __init__.py  auth.py  credits.py  mock_bot.py  mollie.py
backend/app/static_data/: __init__.py  challenges.py  economy.py  timezones.py
backend/tests/: conftest.py  test_attempts.py  test_auth.py  test_challenges.py  test_credits.py  test_health.py  test_payments.py  test_users.py
db/: attempts.sql  challenges.sql  conversations.sql  credit_purchases.sql  credit_transactions.sql  credit_wallets.sql  messages.sql  payments.sql  timezones.sql  users.sql
docs/features/: BB-1-prompt-injection-challenges.md  BB-2-credits-economy.md  (+2 more)
frontend/: Dockerfile  package-lock.json  tailwind.config.ts  vite.config.ts
scripts/: check-commit-msg.sh  provision-avatar-storage-local.sh  restart-backend-services.sh  start-all.sh  start-backend-services.sh  start-frontend.sh  start-local-auth.sh  stop.sh
(+47 files in other folders)
